--- a/biblio.bib
+++ b/biblio.bib
@@ -141,3 +141,21 @@ doi = {10.1016/S1353-4858(08)70086-2}
   pages={312-321},
   keywords={Traffic control;Telecommunication traffic;Computer crime;Internet;Costs;Linux;Filtering;Computer science;Computerized monitoring;IP networks},
   doi={10.1109/ICNP.2002.1181418}}
+
+@misc{microsoftAzureDDoS,
+	author = {Microsoft Azure},
+	title = {{A}zure {D}{D}o{S} {P}rotection—2021 {Q}3 and {Q}4 {D}{D}o{S} attack trends | {M}icrosoft {A}zure {B}log --- azure.microsoft.com},
+	howpublished = {\url{https://azure.microsoft.com/en-us/blog/azure-ddos-protection-2021-q3-and-q4-ddos-attack-trends/}},
+	year = {},
+	note = {[Accessed 20-06-2024]},
+}
+
+@article{pavithra2014comprehensive,
+  title={A Comprehensive Study on Distributed Denial of Service Attacks and Defense Mechanisms},
+  author={Pavithra, KC and Shetty, Snitha and Nagesh, HR},
+  journal={International Journal of Computer Applications},
+  volume={975},
+  pages={8887},
+  year={2014},
+  publisher={Citeseer}
+}
