--- a/biblio.bib
+++ b/biblio.bib
@@ -159,3 +159,11 @@ doi = {10.1016/S1353-4858(08)70086-2}
   year={2014},
   publisher={Citeseer}
 }
+
+@misc{ebraryFundamentalsDDoS,
+	author = {},
+	title = {{F}undamentals of {D}{D}o{S} {A}ttack: {E}volution and {C}hallenges --- ebrary.net},
+	howpublished = {\url{https://ebrary.net/189499/computer_science/fundamentals_ddos_attack_evolution_challenges}},
+	year = {},
+	note = {[Accessed 20-06-2024]},
+}
